Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-7753

advanced search in filesystem don't understand "~" folder

    XMLWordPrintable

Details

    • f844ab4c0bbfd1776443ac2c2eb6d733e006da91

    Description

      • type CTRL-SHIFT-F and switch to searching "files in filesystem"
      • typing "~/src/blah" in the directory textbox doesn't work but if I write out "/home/username/src/blah" then it works

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            con Eike Ziller
            mnemo mnemo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes