File system search: Support ~/ for the directory that is searched

Start using Utils::FileName for that.

Task-number: QTCREATORBUG-7753
Change-Id: I07276fcf1c609c68fcb63ac11a8833c78afd4fdd
Reviewed-by: Daniel Teske <daniel.teske@digia.com>